--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "bower": "^1.3.11",
     "karma": "^0.12.23",
     "karma-chrome-launcher": "^0.1.4",
-    "karma-jasmine": "^0.1.5"
+    "karma-jasmine": "^0.1.5",
+    "http-server": "^0.6.1"
   }
 }
