--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "bower": "^1.3.11",
     "karma": "^0.12.23",
     "karma-chrome-launcher": "^0.1.4",
-    "karma-jasmine": "^0.1.5",
-    "http-server": "^0.6.1"
+    "karma-jasmine": "0.2.2",
+    "http-server": "^0.6.1",
+    "jasmine-node": "2.0.0"
   }
 }
