--- a/bower.json
+++ b/bower.json
@@ -17,9 +17,12 @@
   "dependencies": {
     "angular": "~1.2.25",
     "angular-route": "~1.2.25",
-    "angular-mocks": "~1.2.25",
     "jquery": "~2.1.1",
     "lodash": "~2.4.1",
     "bootstrap": "~3.2.0"
+  },
+  "devDependencies": {
+    "angular-mocks": "~1.2.25",
+    "chance": "~0.5.6"
   }
 }
