--- a/bower.json
+++ b/bower.json
@@ -19,7 +19,8 @@
     "angular-route": "~1.2.25",
     "jquery": "~2.1.1",
     "lodash": "~2.4.1",
-    "bootstrap": "~3.2.0"
+    "bootstrap": "~3.2.0",
+    "angular-bootstrap": "~0.11.2"
   },
   "devDependencies": {
     "angular-mocks": "~1.2.25",
